feat: Implement Nautilus component with sidebar and grid layout

--- a/src/app/layout/titlebar/titlebar.component.html
+++ b/src/app/layout/titlebar/titlebar.component.html
@@ -153,6 +153,11 @@
     </button>
 
     <mat-divider></mat-divider>
+    <button mat-menu-item (click)="onBrowseClick()">
+      <span>File Browser</span>
+      <span class="shortcut" aria-hidden="true">Ctrl + F</span>
+    </button>
+    <mat-divider></mat-divider>
 
     <button
       mat-menu-item
